--- a/cyclotron-site/bower.json
+++ b/cyclotron-site/bower.json
@@ -78,6 +78,9 @@
         "src-noconflict/mode-mysql.js",
         "src-noconflict/mode-sql.js",
         "src-noconflict/theme-chrome.js",
+        "src-noconflict/theme-monokai.js",
+        "src-noconflict/theme-solarized_dark.js",
+        "src-noconflict/theme-tomorrow_night.js",
         "src-noconflict/worker-css.js",
         "src-noconflict/worker-html.js",
         "src-noconflict/worker-javascript.js",
